# rust-getset2

./: Cargo.toml  README.md  deny.toml
.github/workflows/: audit.yml  ci.yml  deps.yml  lint.yml
doc/: getter.md  setter.md
src/: args.rs  extract.rs  field.rs  getter.rs  lib.rs  ty.rs  vis.rs
src/getter/: args.rs  borrow.rs  builder.rs  bytes.rs  clone.rs  context.rs  copy.rs  expand.rs  field.rs  gen.rs  getter.rs  getters.rs  mod.rs  mutable.rs  option.rs  slice.rs  str.rs
src/setter/: args.rs  builder.rs  context.rs  expand.rs  extend.rs  field.rs  gen.rs  into.rs  mod.rs  option.rs  setter.rs  setters.rs  try_into.rs
tests/: compile_error.rs  doc_test.rs  get_attr.rs  get_attrs.rs  get_borrow_mut.rs  get_bytes.rs  get_clone.rs  get_const.rs  get_copy.rs  get_mut.rs  get_opt.rs  get_prefix.rs  get_pub.rs  get_ref.rs  get_slice.rs  get_str.rs  get_suffix.rs  getter.rs  set_attr.rs  set_attrs.rs  set_extend.rs  set_into.rs  set_opt.rs  set_pub.rs  set_try_into.rs  setter.rs  unnamed_struct.rs
tests/compile_error/: bad_get.rs  bad_get.stderr  bad_set.rs  bad_set.stderr  clone_is_not_const.rs  clone_is_not_const.stderr  empty_struct.rs  enum.rs  enum.stderr  get_borrow.rs  get_borrow.stderr  get_bytes.rs  get_bytes.stderr  get_clone.rs  get_clone.stderr  get_const.rs  get_const.stderr  get_copy.rs  get_copy.stderr  get_opt.rs  get_opt.stderr  get_slice.rs  get_slice.stderr  invalid_rename.rs  invalid_rename.stderr  invalid_visibility.rs  invalid_visibility.stderr  multi_get.rs  multi_set.rs  set_extend.rs  set_extend.stderr  set_into.rs  set_into.stderr  (+7 more)
