[package]
name = "getset2"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
edition = "2021"
description = "A procedural macro for generating the getter and setter on fields."
documentation = "https://docs.rs/getset2"
readme = "README.md"
repository = "https://github.com/flier/getset2/"
license = "MIT OR Apache-2.0"
keywords = ["macro", "getter", "setter"]
categories = ["development-tools::procedural-macro-helpers"]
rust-version = "1.60"
resolver = "2"

[lib]
proc-macro = true

[dependencies]
derive_more = "0.99"
merge = "0.1"
proc-macro-error = { version = "1", default-features = false }
proc-macro2 = "1"
quote = "1"
structmeta = "0.2"
syn = { version = "2", features = ["extra-traits"] }


[dev-dependencies]
doc-comment = "0.3"
trybuild = "1"
